a few refactor for likes and bookmarks
