# api/handlers/bookmark.go
@@ -91,7 +91,7 @@ func (h *BookmarkHandler) Create(ctx *gin.Context) {
 // @Failure      404  {object}  map[string]interface{}  "No bookmarks found"
 // @Failure      500  {object}  map[string]interface{}  "Failed to retrieve bookmarks"
 // @Router       /bookmarks [get]
-func (a *BookmarkHandler) GetUsersBookmarks(ctx *gin.Context) {
+func (a *BookmarkHandler) GetUserBookmarks(ctx *gin.Context) {
 	userID := uint(ctx.GetInt("id"))
 
 	bookmarks, err := a.bookmarkService.GetUsersBookmarks(ctx, userID)
@@ -140,33 +140,33 @@ func (a *BookmarkHandler) GetUsersBookmarks(ctx *gin.Context) {
 // @Description  Retrieve a bookmark by its ID for the authenticated user
 // @Tags         Bookmarks
 // @Produce      json
-// @Param        id  path      string  true  "Bookmark ID" example:"1"
-// @Security     BearerAuth
+// @Param        id  path      string  true  "ArticleID ID" example:"1"
 // @Success      200  {object}  map[string]interface{}  "Bookmark retrieved successfully"
 // @Failure      404  {object}  map[string]interface{}  "Bookmark not found"
 // @Failure      400  {object}  map[string]interface{}  "Invalid bookmark ID"
-func (a *BookmarkHandler) DeleteByID(ctx *gin.Context) {
-	id := ctx.Param("id")
+// @Router       /bookmarks/article/{id} [delete]
+func (a *BookmarkHandler) Delete(ctx *gin.Context) {
+	articleID := ctx.Param("id")
 	userID := uint(ctx.GetInt("id"))
 
-	err := a.bookmarkService.DeleteBookmark(ctx, userID, uint(helpers.StringToInt(id)))
+	err := a.bookmarkService.DeleteBookmark(ctx, uint(helpers.StringToInt(articleID)),userID)
 	if err != nil {
-		if errors.Is(err, repository.ErrLikeNotFound) {
-			helpers.RespondWithError(ctx, http.StatusNotFound, "Like not found for deletion", map[string]interface{}{
-				"like_id": id,
+		if errors.Is(err, repository.ErrBookmarkNotFound) {
+			helpers.RespondWithError(ctx, http.StatusNotFound, "bookmark not found for deletion", map[string]interface{}{
+				"article_id": articleID,
 				"error":   err.Error(),
 			})
 			return
 		}
 		helpers.RespondWithError(ctx, http.StatusBadRequest, "Failed to delete bookmark", map[string]interface{}{
-			"like_id": id,
+			"article_id": articleID,
 			"error":   err.Error(),
 		})
 		return
 	}
 
-	helpers.RespondWithSuccess(ctx, http.StatusOK, "Like deleted successfully", map[string]interface{}{
-		"deleted_like_id": id,
+	helpers.RespondWithSuccess(ctx, http.StatusOK, "bookmark deleted successfully", map[string]interface{}{
+		"deleted_article_bookmark_id":articleID ,
 		"metadata": map[string]interface{}{
 			"timestamp": time.Now(),
 			"status":    "deleted",
